# scphylo-tools

./: .bumpversion.cfg  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .rstcheck.cfg  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  LICENSE  LICENSE.md  MANIFEST.in  Makefile  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.rst
.github/ISSUE_TEMPLATE/: bug_report.md  enhancement_request.md  general_question.md
.github/workflows/: ci.yml
.pixi/: config.toml
.scripts/ci/: install_dependencies.sh
docs/: make.bat  requirements.txt
docs/source/: api_reference.rst  cli_reference.rst  conf.py  getting_started.ipynb  index.rst  installation.rst  references.bib
docs/source/_static/css/: override.css
examples/: README.rst
examples/assessment/: README.rst  compute_partf.py
examples/comparison/: README.rst  compute_ad.py  compute_caset.py  compute_disc.py  compute_dl.py  compute_gs.py  compute_mltd.py  compute_mp3.py  compute_rf.py  compute_scores.py  compute_tpted.py
examples/reconstruction/: README.rst  compute_bnb.py  compute_booster.py  compute_gpps.py  compute_huntress.py  compute_onconem.py  compute_phiscs.py  compute_scistree.py  compute_scite.py  compute_siclonefit.py  compute_sphyr.py
examples/visualization/: README.rst  plot_clonal.py  plot_dendrogram.py
paper/: paper.bib  paper.md  papr.md
scphylo/: __init__.py
scphylo/commands/: scphylo.py
scphylo/commands/caller/: _1rename.py  _1sra.py  _2fastp.py  _3bwa.py  _3star.py  _4gatk.py  _4rsem.py  _5hapcaller.py  _5mpileup.py  _5mutect2.py  _5sequenza.py  _5strelka.py  _5strelka2.py  _5varscan2.py  _6bamreadcount.py  _6bamsnap.py  _6defuse.py  _6pyclone.py  _6snpeff.py  _6varfilter.py  _6vartrix.py  __init__.py  _pseudobulk.py
scphylo/commands/methyl/: _builds.py
scphylo/commands/solver/: __init__.py  _bnb.py  _booster.py  _gpps.py  _grmt.py  _huntress.py  _onconem.py  _phiscs.py  _scistree.py  _scite.py  _siclonefit.py  _sphyr.py
scphylo/commands/utils/: _consensus.py  _partf.py  _score.py  _search.py  _trees.py
scphylo/datasets/: __init__.py  _datasets.py  _simulate.py
scphylo/datasets/real/: acute_myeloid_leukemia1.h5ad
scphylo/io/: __init__.py  _genotype.py
scphylo/logging/: __init__.py  _logging.py
scphylo/pl/: __init__.py  _data.py  _helper.py  _trees.py
scphylo/pp/: __init__.py  _readcount.py  _tree.py
scphylo/settings/: __init__.py  _settings.py
scphylo/tl/: __init__.py
scphylo/tl/cna/: _cna.py
scphylo/tl/consensus/: _consensus.py  _consensus_day.py
scphylo/tl/fitch/: __init__.py
scphylo/tl/partition_function/: _clt_sampler.py  _partition_function.py  _pf.py
scphylo/tl/score/: _ours.py
scphylo/tl/solver/: __init__.py  _bnb.py  _cardelino.py  _gpps.py  _grmt.py  _phiscs.py  _scelestial.py  _sciphi.py  _scistree.py  _scite.py  _siclonefit.py
scphylo/tl/solver/booster/: _booster.py  _dependencies.py  _reconstruct_big_tree.py  _subsamples.py
scphylo/tl/solver/huntress/: __init__.py  _huntress.py
scphylo/ul/: __init__.py  _caller.py  _hclustering.py  _packages.py  _trees.py  _utils.py  bamreadcount.py  cyvcf.py  rsem.py  sequenza.R  star.py
src/scphylo/: __init__.py
src/scphylo/commands/: __init__.py  _cli.py
src/scphylo/commands/caller/: _1sra.py  _3bwa.py  _3star.py  _4gatk.py  _4rsem.py  _5hapcaller.py  _5mpileup.py  _5mutect2.py  _5varscan2.py  _6defuse.py  _6pyclone.py  _6snpeff.py  _6varfilter.py  _6vartrix.py  _pseudobulk.py
src/scphylo/commands/methyl/: __init__.py
src/scphylo/commands/solver/: __init__.py  _bnb.py  _booster.py  _gpps.py  _phiscs.py  _scistree.py  _scite.py  _siclonefit.py
src/scphylo/commands/utils/: __init__.py  _search.py
src/scphylo/datasets/: __init__.py  _datasets.py  _simulate.py
src/scphylo/datasets/real/: acute_lymphocytic_leukemia2.h5ad  acute_lymphocytic_leukemia3.h5ad  acute_myeloid_leukemia1.h5ad  acute_myeloid_leukemia2.h5ad  acute_myeloid_leukemia_many.npz  colorectal2.h5ad  colorectal2.rc.h5ad  colorectal3.h5ad  high_grade_serous_ovarian_cancer1.h5ad  high_grade_serous_ovarian_cancer2.h5ad  high_grade_serous_ovarian_cancer3.h5ad  isogenic_fibroblast_cell_line.h5ad
src/scphylo/datasets/test/consensus/: biorxiv.fig3b.CFMatrix  biorxiv.fig4b.CFMatrix
src/scphylo/datasets/test/output/: test.siclonefit.score
src/scphylo/io/: _genotype.py  _tree.py
src/scphylo/pl/: __init__.py  _data.py  _helper.py  _trees.py
src/scphylo/pp/: _bifiltering.py  _binary.py  _readcount.py  _tree.py
src/scphylo/settings/: __init__.py  _settings.py
src/scphylo/tl/: __init__.py
src/scphylo/tl/cna/: __init__.py  _cna.py
src/scphylo/tl/consensus/: __init__.py  _consensus_day.py
src/scphylo/tl/fitch/: _fitch.py
src/scphylo/tl/partition_function/: __init__.py  _clt_sampler.py  _pf.py
src/scphylo/tl/score/: __init__.py  _others.py  _ours.py
src/scphylo/tl/solver/: __init__.py  _bnb.py  _cellphy.py  _dendro.py  _gpps.py  _onconem.py  _phiscs.py  _sasc.py  _sbm.py  _scelestial.py  _sciphi.py  _scistree.py  _scite.py  _siclonefit.py  _sphyr.py
src/scphylo/tl/solver/booster/: __init__.py  _dependencies.py  _reconstruct_big_tree.py  _subsamples.py
src/scphylo/tl/solver/huntress/: __init__.py  _huntress.py
src/scphylo/ul/: __init__.py  _caller.py  _external.py  _hclustering.py  _packages.py  _servers.py  _trees.py  _utils.py  bamreadcount.py  cyvcf.py  rsem.py  star.py
tests/: __init__.py  _helpers.py  conftest.py  test_command_wrappers.py  test_commands_solver.py  test_commands_utils_fast.py  test_core_fast_coverage.py  test_datasets.py  test_external_distributions.py  test_external_solver_adapters.py  test_gpps_helpers.py  test_huntress_fast_coverage.py  test_io.py  test_logging.py  test_mp3_hclustering_fast.py  test_pl.py  test_plotting_fast_coverage.py  test_pp.py  test_scelestial_helpers.py  test_tl_consensus.py  test_tl_fast_coverage.py  test_tl_partition_function.py  test_tl_scores.py  test_tl_solver_fast_coverage.py  test_tl_solvers.py  test_tl_solvers_tmp.py  test_ul.py
