[build-system]
requires = ["setuptools>=61.0", "setuptools_scm>=8.0", "wheel", "Cython"]
build-backend = "setuptools.build_meta"

[project]
name = "scphylo-tools"
dynamic = ["version"]
description = "A python toolkit for single-cell tumor phylogenetic analysis"
requires-python = ">=3.11"
dependencies = [
    "anndata",
    "apted",
    "biopython",
    "click",
    "cython",
    "cyvcf2",
    "ete3",
    "graphviz",
    "ipython",
    "joblib",
    "matplotlib",
    "natsort",
    "networkx",
    "numba",
    "numpy",
    "pandas",
    "pybnb",
    "pydot<2.0.0",
    "python_sat",
    "pyyaml",
    "scikit_learn",
    "scipy",
    "setuptools",
    "seaborn",
    "termcolor",
    "tqdm",
]
authors = [
    {name = "Farid Rashidi", email = "farid.rsh@gmail.com"},
]
maintainers = [
    {name = "Farid Rashidi", email = "farid.rsh@gmail.com"},
]
license = {text = "BSD-3-Clause"}
readme = "README.rst"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Framework :: Jupyter",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Visualization",
]
keywords = ["tumor phylogeny", "single cell", "tools"]

[project.urls]
Homepage = "https://github.com/faridrashidi/scphylo-tools"
Documentation = "https://scphylo-tools.readthedocs.io/en/latest"
"Source Code" = "https://github.com/faridrashidi/scphylo-tools"
Download = "https://github.com/faridrashidi/scphylo-tools"

[project.scripts]
scphylo = "scphylo.commands._cli:cli"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest-cov",
    "pytest-xdist",
    "bumpversion",
]
docs = [
    "furo",
    "ipython",
    "memory_profiler",
    "nbsphinx",
    "nbsphinx-link",
    "pydata_sphinx_theme",
    "pyenchant",
    "pypandoc",
    "sphinx<6",
    "sphinx-autodoc-typehints",
    "sphinx-click",
    "sphinx-paramlinks",
    "sphinx_copybutton",
    "sphinx_gallery",
    "sphinx_rtd_theme",
    "sphinxcontrib-bibtex",
    "typing_extensions",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]

[tool.cibuildwheel]
build = "cp3*-* pp3*-*"
