[build-system]
requires = ["setuptools>=61.0", "setuptools_scm>=8.0", "wheel", "Cython"]
build-backend = "setuptools.build_meta"

[project]
name = "scphylo-tools"
version = "0.0.5"
description = "A python toolkit for single-cell tumor phylogenetic analysis"
requires-python = ">=3.11"
dependencies = [
    "anndata",
    "apted",
    "biopython",
    "click",
    "cython",
    "cyvcf2",
    "ete3",
    "graphviz",
    "ipython",
    "joblib",
    "matplotlib",
    "natsort",
    "networkx",
    "numba",
    "numpy",
    "pandas",
    "pybnb",
    "pydot<2.0.0",
    "python_sat",
    "pyyaml",
    "scikit_learn",
    "scipy",
    "seaborn",
    "termcolor",
    "tqdm",
]
authors = [{ name = "Farid Rashidi", email = "farid.rsh@gmail.com" }]
maintainers = [{ name = "Farid Rashidi", email = "farid.rsh@gmail.com" }]
license = { text = "BSD-3-Clause" }
readme = "README.rst"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Framework :: Jupyter",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Visualization",
]
keywords = ["tumor phylogeny", "single cell", "tools"]

[project.urls]
Homepage = "https://github.com/faridrashidi/scphylo-tools"
Documentation = "https://scphylo-tools.readthedocs.io/en/latest"
"Source Code" = "https://github.com/faridrashidi/scphylo-tools"
Download = "https://github.com/faridrashidi/scphylo-tools"

[project.scripts]
scphylo = "scphylo.commands._cli:cli"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest-cov",
    "pytest-xdist",
    "bump-my-version",
    "ipykernel",
]
docs = [
    "furo",
    "ipython",
    "memory_profiler",
    "nbsphinx",
    "nbsphinx-link",
    "pydata_sphinx_theme",
    "pyenchant",
    "pypandoc",
    "sphinx<6",
    "sphinx-autodoc-typehints",
    "sphinx-click",
    "sphinx-paramlinks",
    "sphinx_copybutton",
    "sphinx_gallery",
    "sphinx_rtd_theme",
    "sphinxcontrib-bibtex",
    "typing_extensions",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]

[tool.cibuildwheel]
build = "cp3*-* pp3*-*"

[tool.bumpversion]
current_version = "0.0.5"
commit = true
message = "🔖 Release {new_version}"
tag = true
tag_name = "v{new_version}"
parse = '(?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)'
serialize = ["{major}.{minor}.{patch}"]

[[tool.bumpversion.files]]
filename = "src/scphylo/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[[tool.bumpversion.files]]
filename = "uv.lock"
regex = true
search = '(?ms)(\[\[package\]\]\nname = "scphylo-tools"\nversion = )"{current_version}"'
replace = '\1"{new_version}"'
